--- a/.github/workflows/rtl8811cu.yml
+++ b/.github/workflows/rtl8811cu.yml
@@ -2,9 +2,9 @@ name: Makefile CI
 
 on:
   push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+  workflow_dispatch:
+  schedule:
+    - cron: 45 12 * * *
 
 jobs:
   build:
@@ -17,7 +17,7 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@main
       with:
           ref: master
 
