--- a/.github/workflows/rtl8811cu.yml
+++ b/.github/workflows/rtl8811cu.yml
@@ -26,7 +26,7 @@ jobs:
         sudo apt -y update
         sudo apt -y upgrade
         sudo apt dist-upgrade
-        sudo apt -y install linux-headers-$(uname -r) dkms git bc
+        sudo apt -y install build-essential dkms git bc
 
     - name: Compile
       run: |
