--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,7 +10,7 @@ build_script:
   - uname -a
   - sudo apt -y update
   - sudo apt -y upgrade
-  - sudo apt dist-upgrade
+  - sudo apt -y dist-upgrade
   - sudo apt -y install build-essential dkms git bc
   - uname -a
   - make
