--- a/.github/workflows/rtl8811cu.yml
+++ b/.github/workflows/rtl8811cu.yml
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
         matrix:
-            os: [ubuntu-22.04, ubuntu-20.04, self-hosted]
+            os: [ubuntu-22.04, ubuntu-20.04]
 
     steps:
     - name: Checkout
