--- a/.github/workflows/rtl8811cu.yml
+++ b/.github/workflows/rtl8811cu.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
         matrix:
-            os: [ubuntu-22.04, ubuntu-20.04, kali-linux-2024.1, linuxmint-21.3-cinnamon]
+            os: [ubuntu-22.04, ubuntu-20.04]
 
     steps:
     - name: Checkout
