--- a/.github/workflows/rtl8811cu.yml
+++ b/.github/workflows/rtl8811cu.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   build:
@@ -20,9 +21,8 @@ jobs:
       with:
           ref: master
 
-    - name: configure
+    - name: Configure
       run: |
-        uname -a
         sudo apt-get update
         sudo apt-get -y install linux-headers-generic dkms git bc
         uname -a
